# RL-Squared-V2

./: Dockerfile  example.py  requirements.txt  sanity_check.py
LaTeX/: RL^2_FinalReport.aux  RL^2_FinalReport.bbl  RL^2_FinalReport.blg  RL^2_FinalReport.fdb_latexmk  RL^2_FinalReport.fls  RL^2_FinalReport.out  RL^2_FinalReport.tex  references.bib  refs.bib
anshuman/: .gitignore  align_1.yaml  build_environment.py  config.yaml  debug.yaml  gentle_1.yaml  grounded_1.yaml  grounded_2.yaml  grounded_pivot_2.yaml  metricLogger.py  phase1.yaml  requirements.txt  retrain_value.yaml  sparse_1.yaml  spm_param_sweep.py  tester.yaml  train.py  train_p1.py  train_p2.py  train_p3.py  visualize.yaml  wandb_util.py
exploratory/: sanity_check.py
phillipCurriculum/: build_environment.py  phase0.yaml  phase1.yaml  settings.txt  train.py
pure_ppo/: train.py
v3/: .gitignore  README.md  analysis.ipynb  default.yaml  elo.py  leaderboard.csv  matches.csv  matches1.csv  matches2.csv  matches3.csv  matches5.csv  pyproject.toml  render.py  train.py  visgym.py  vistest.ipynb  visualize.py
v3/cfg/: curriculum.yaml  curriculum_slow.yaml  curriculum_tiny.yaml  curriculum_wide.yaml  debug.yaml  default.yaml  gentle_1.yaml  gentle_bigcrit2.yaml  gentle_small.yaml  gentle_tiny.yaml  gentle_tiny2.yaml  grounded.yaml  visualize.yaml
v3/elo_system/: consts.py  eloSystem.py  elo_env.py  model.py  sim.py  skill.py
v3/utils/: __init__.py  build_environment.py  metricLogger.py  models.py  spm_param_sweep.py  wandb_util.py
v3/utils/rewards/: __init__.py  combReward.py  funcReward.py
(+19 files in other folders)
