[project]
name = "v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arguably>=1.3.0",
    "rlgym-ppo",
    "rlgym-sim",
    "rocketsim>=2.1.1.post1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
rlgym-sim = { git = "https://github.com/AechPro/rocket-league-gym-sim", rev = "main" }
rlgym-ppo = { git = "https://github.com/AechPro/rlgym-ppo" }
