[project]
name = "v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arguably>=1.3.0",
    "openskill>=6.0.2",
    "pandas>=2.2.3",
    "rlgym-ppo",
    "rlgym-sim",
    "rlviser-py>=0.6.9",
    "rocketsim>=2.1.1.post1",
    "torch>=2.4.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
rlgym-sim = { git = "https://github.com/AechPro/rocket-league-gym-sim", rev = "main" }
rlgym-ppo = { git = "https://github.com/AechPro/rlgym-ppo" }
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
